# sd-wildcard-editor

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml
public/: wildcard.txt
public/wildcards/: touhou-chars.txt  wildcard.txt  wildcard_new.txt
src/: App.vue  draggableWindow.ts  fileType.ts  main.css  main.ts  projectExplorer.ts  selectionListeners.ts  setupResize.ts  styles.css  textEditor.ts  wildcardDocument.ts
src-tauri/: Cargo.toml  _new  tauri.conf.json
src-tauri/src/: cli_arguments.rs  main.rs  state.rs
src-tauri/src/database/: database_session.rs  helper.rs  migration_handler.rs  mod.rs
src-tauri/src/database/datatypes/: db_files.rs  db_merge_definition.rs  db_project.rs  db_settings.rs  db_subject.rs  db_wildcard.rs  db_workspace.rs  mod.rs
src-tauri/src/database/migrations/: environment_development.rs  merge_definitions.rs  mod.rs  mutation_behaviour_settings.rs  tracked_files_table.rs
src-tauri/src/database/mutations/: environment_development.rs  mod.rs  mutation_selector.rs  test_mutation.rs
src-tauri/src/database/operations/: db_common.rs  db_composite.rs  db_item.rs  db_load.rs  db_read.rs  db_write.rs  mod.rs  tables.rs
src-tauri/src/deployment/: deploy_node.rs  deployable.rs  deployment.rs  mod.rs
src-tauri/src/helpers/: dir_utils.rs  file_utils.rs  mod.rs  path_utils.rs  syntax_utils.rs  uuid_utils.rs  vec_utils.rs
src-tauri/src/logging/: log_level.rs  logger.rs  logger_colors.rs  logger_frontend.rs  logger_helpers.rs  logger_settings.rs  mod.rs
src-tauri/src/subjects/: merge_definition.rs  merge_node.rs  mod.rs  node_type.rs
src-tauri/src/wildcards/: directory_parser.rs  loader.rs  mod.rs  update.rs  wildcard.rs  wildcard_data.rs
src/css/: colors.css  contextMenu.css  fileHierarcy.css  fonts.css  mergeEditor.css  styles.css  textEditor.css  viewport.css
(+60 files in other folders)
