[package]
name = "sd-wildcard-editor"
version = "0.0.0"
description = "A Wildcard editor for Stable Diffusion"
authors = ["Cruxial"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-start-dragging", "window-minimize", "window-hide", "window-maximize", "window-close", "window-unminimize", "window-show", "window-unmaximize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
project-root = "0.2.2"
walkdir = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
